--- a/src/styles/PDFViewer.css
+++ b/src/styles/PDFViewer.css
@@ -13,14 +13,16 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #1f1f1f;
-  padding: 20px;
 }
 
 .page-info {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
-  margin-bottom: 20px;
+  gap:60rem;
+  position: sticky;
+  top:0;
+  z-index: 1;
 }
 
 .page-info form {
@@ -34,14 +36,16 @@ body {
   width: 70px;
 }
 
-.page-info button {
-  padding: 5px 10px;
-  background-color: #fff;
-  border: none;
-  cursor: pointer;
-}
+/* .page-info button { */
+/*   padding: 5px 10px; */
+/*   background-color: #1f1f1f; */
+/*   border-radius: 10px; */
+/*   border: 1px solid white; */
+/*   cursor: pointer; */
+/*   color: white; */
+/* } */
 
 .react-pdf__Page {
-  border: 3px solid white;
+  border: 2px solid white;
   margin: 2rem;
 }
